--- a/.github/workflows/nancy.yaml
+++ b/.github/workflows/nancy.yaml
@@ -1,11 +1,20 @@
 ---
 name: Nancy 3p Vulnerability Scan
 on:
-  push:
   pull_request:
+    branches:
+      - main
     types:
       - opened
       - synchronize
+      - reopened
+  push:
+    branches:
+      - main
+  schedule:
+    # Run once a week (see https://crontab.guru)
+    - cron: "0 0 * * 0"
+  workflow_dispatch:
 
 jobs:
   nancy:
@@ -18,7 +27,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491 # v5
         with:
-          go-version: '1.22'
+          go-version: '1.23'
 
       - name: Write go.list
         run: |
