feat: Add nancy vuln scan & switch to markdownlint CLI, upgrade go deps
**Added:**

- Added `.hooks/nancy-scan.sh` pre-commit script for vulnerability checks using
  nancy against Go dependencies.
- Registered `nancy-vulnerability-scan` in `.pre-commit-config.yaml` to scan
  on `go.mod`/`go.sum` changes.
- Introduced `.hooks/linters/markdownlint.json` for markdownlint-cli rules.
- Enabled markdownlint pre-commit hook using CLI and JSON config.

**Changed:**

- Upgraded many Go dependencies in `go.mod` and `go.sum` (Kubernetes, Helm,
  Sigs.k8s.io, github.com/*, etc.) to latest versions.
- Updated go.mod syntax from `go 1.24` to `go 1.24.0`.
- Aligned `.pre-commit-config.yaml` to use `markdownlint-cli` instead of Ruby
  style files; passes custom config to CLI.

**Removed:**

- Deprecated legacy Ruby-based Markdown style `.hooks/linters/mdstyle.rb`.
- Removed unused/old indirect Go module dependencies from `go.mod`/`go.sum`
  (docker, moby, etc.).

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,8 +47,12 @@ repos:
         exclude: .bats
       - id: shellcheck
       - id: shfmt
-      # Configuration in .mdlrc and .hooks/linters/mdstyle.rb
+
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.45.0
+    hooks:
       - id: markdownlint
+        args: ['--fix', '--config', '.hooks/linters/markdownlint.json']
 
   - repo: local
     hooks:
@@ -91,3 +95,11 @@ repos:
         entry: .hooks/prettier-hook.sh
         language: script
         types: [json, yaml]
+
+      - id: nancy-vulnerability-scan
+        name: Nancy vulnerability scan
+        entry: .hooks/nancy-scan.sh
+        language: script
+        pass_filenames: false
+        files: '(go\.mod|go\.sum)$'
+        description: "Run nancy to check for vulnerabilities in Go dependencies"
