--- a/.github/workflows/goreleaser.yaml
+++ b/.github/workflows/goreleaser.yaml
@@ -1,9 +1,13 @@
 ---
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: goreleaser
 on:
   push:
     tags:
       - "*"
+
+env:
+  GO_VERSION: 1.24.0
 
 jobs:
   goreleaser:
@@ -21,7 +25,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5
         with:
-          go-version: "1.23"
+          go-version: "${{ env.GO_VERSION }}"
           cache-dependency-path: "**/*.sum"
 
       - name: Fix GOPATH
