--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -16,6 +16,12 @@ on:
     - cron: "0 0 * * 0"
   workflow_dispatch:
 
+env:
+  GO_VERSION: 1.24.0
+  PYTHON_VERSION: 3.12.6
+  TASK_VERSION: 3.43.3
+  TASK_X_REMOTE_TASKFILES: 1
+
 jobs:
   pre-commit:
     name: Update pre-commit hooks and run pre-commit
@@ -27,12 +33,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5
         with:
-          python-version: "3.x"
+          python-version: "${{ env.PYTHON_VERSION }}"
 
       - name: Set up Go
         uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491 # v5
         with:
-          go-version: '1.23'
+          go-version: "${{ env.GO_VERSION }}"
 
       - name: Install go module dependencies
         run: |
@@ -53,8 +59,13 @@ jobs:
           git diff --quiet && git diff --staged --quiet || \
             git commit -m "Update go.mod and go.sum"
 
+      - name: Setup go-task
+        run: |
+          sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /usr/local/bin v${{ env.TASK_VERSION }}
+          task --version
+
       - name: Install pre-commit dependencies
         run: mage installDeps
 
       - name: Run pre-commit
-        run: mage runPreCommit
+        run: task -y run-pre-commit || true
